# polymarket-alg

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  hud.yaml  pyproject.toml  tasks.json
configs/: base.yaml
controller/: __init__.py  __main__.py  tools.py
docs/: architecture.md
environment/: __init__.py  server.py
examples/: evaluation_records.json
src/polymarket_ai/: __init__.py  app.py  bootstrap.py  cli.py  example_data.py
src/polymarket_ai/agent/: schemas.py  workflow.py
src/polymarket_ai/evaluation/: service.py
src/polymarket_ai/execution/: paper.py
src/polymarket_ai/hud/: __init__.py  agents.py  app.py  cli.py  config.py  environment.py  models.py  orchestrator.py  runtime.py  scenarios.py  tools.py
src/polymarket_ai/infra/: config.py  logging.py  paths.py  providers.py
src/polymarket_ai/market_data/: adapters.py  schemas.py  service.py
src/polymarket_ai/models/: __init__.py  agentic.py  domain.py
src/polymarket_ai/portfolio/: service.py
src/polymarket_ai/pricing/: schemas.py  service.py
src/polymarket_ai/ranking/: __init__.py  service.py
src/polymarket_ai/reliability/: __init__.py  cache.py  circuit_breaker.py  retry.py  timeout.py
src/polymarket_ai/repositories/: __init__.py  market_repo.py  (+3 more)
tests/: test_agentic_pipeline_shape.py  test_controller_import.py  test_fail_closed_persistence.py  test_hud_deploy_surface.py  test_hud_env.py  test_market_data_adapters.py  test_output_contract.py  test_pipeline_smoke.py  test_pricing.py  test_ranking.py  test_reliability.py  test_services.py
(+11 files in other folders)
