[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-ai-system"
version = "0.1.0"
description = "Infrastructure-first AI research and trading system scaffold for Kalshi."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "PyYAML>=6.0.1",
  "SQLAlchemy>=2.0.29",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "fastmcp[tasks]>=3.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.1",
  "pytest-cov>=5.0.0",
  "ruff>=0.3.7",
  "mypy>=1.9.0",
]

[project.scripts]
polymarket-ai = "polymarket_ai.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
packages = ["polymarket_ai"]
